...
  String get tapToJumpToCurrentWeek => 'Toque para ir para a semana atual';

  @override
  String get thisWeek => 'Esta semana';

  @override
  String get mealOptions => 'Opções de Refeição';

  @override
  String get viewRecipeDetails => 'Ver Detalhes da Receita';

  @override
  String get changeRecipe => 'Trocar Receita';
...
      'Acompanhamentos atualizados com sucesso';

  @override
  String get addSideDishes => 'Adicionar Acompanhamentos';

  @override
  String get selectRecipe => 'Selecionar Receita';

  @override
  String get tryThis => 'Experimente';

  @override
  String get allRecipes => 'Todas as Receitas';
...
  String get back => 'Voltar';

  @override
  String get addSideDish => 'Adicionar Acompanhamento';

  @override
  String get saveMeal => 'Salvar Refeição';

  @override
  String get recommendationCountMustBePositive =>
      'O número de recomendações deve ser positivo';

  @override
...
