...
          BottomNavigationBarItem(
            icon: const Icon(Icons.home, key: Key('dashboard_tab_icon')),
            label: l10n.dashboard,
          ),
          BottomNavigationBarItem(
            icon: const Icon(Icons.calendar_today,
                key: Key('meal_plan_tab_icon')),
            label: l10n.mealPlan,
          ),
          BottomNavigationBarItem(
            icon: const Icon(Icons.menu_book, key: Key('content_tab_icon')),
            label: l10n.content,
          ),
...
